fjord-compiler/test/errors/uniqueness/ReturnShared.fj
module errors.uniqueness.ReturnShared

returnShared : Int -> Int
returnShared x =
  x
